chore(notebooks): fix ipywidgets metadata so GitHub can render

--- a/TransferLearning_with_Bert_Model_for_hierarchical.ipynb
+++ b/TransferLearning_with_Bert_Model_for_hierarchical.ipynb
@@ -15,29 +15,12 @@
     },
     "accelerator": "GPU",
     "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "08a435986e8140ed806d8f5781d40e76": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_453fb32c6d594b3fa0b93f9aad6ec4de",
-              "IPY_MODEL_755cd6eec52244a68f795a04143c2faa",
-              "IPY_MODEL_75db1fa769b94268a5c3aa4cf94e22d2"
-            ],
-            "layout": "IPY_MODEL_696aec53c270499fa6930530d1e7adf5"
-          }
-        },
+  "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+  }
+},
         "453fb32c6d594b3fa0b93f9aad6ec4de": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
